--- a/backend/attachments/package.json
+++ b/backend/attachments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posts",
+  "name": "attachments",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,25 +23,28 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/microservices": "^7.0.7",
-    "@nestjs/mongoose": "^6.4.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "mongoose": "^5.9.7",
-    "mongoose-paginate-v2": "^1.3.9",
+    "@nestjs/microservices": "^7.0.11",
+    "@nestjs/mongoose": "^7.0.1",
+    "@nestjs/platform-express": "^7.0.8",
+    "cloudinary": "^1.21.0",
+    "datauri": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.9.13",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "transliteration": "^2.1.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.6",
     "@types/jest": "25.1.4",
-    "@types/mongoose": "^5.7.8",
-    "@types/mongoose-paginate-v2": "^1.3.1",
+    "@types/mongoose": "^5.7.19",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
+    "@types/transliteration": "^1.6.6",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
@@ -50,7 +53,7 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
+    "ts-jest": "^25.5.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
