--- a/backend/gateway/package.json
+++ b/backend/gateway/package.json
@@ -25,11 +25,12 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.0.5",
     "@nestjs/mongoose": "^6.4.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.11",
     "mongoose": "^5.9.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "transliteration": "^2.1.9"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.1.2",
@@ -48,7 +49,7 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
+    "ts-jest": "^25.5.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
